load("@bazel_gazelle//:def.bzl", "gazelle")
load("@npm//@bazel/typescript:index.bzl", "ts_config")

# gazelle:prefix github.com/mikberg/irrigation
gazelle(name = "gazelle")

# update the running process on the pi
alias(
    name = "update",
    actual = "//scripts:updatepi",
)

alias(
    name = "sendtopi",
    actual = "//scripts:sendtopi",
)

alias(
    name = "deployclient",
    actual = "//scripts:deployclient",
)

# Typescript
ts_config(
    name = "ts_config",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

exports_files(["tsconfig.json"])
