load("@bazel_gazelle//:def.bzl", "gazelle")
load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("@io_bazel_rules_go//go:def.bzl", "go_path")

# gazelle:prefix github.com/mikberg/irrigation
# gazelle:resolve go github.com/mikberg/irrigation/protobuf @irrigation//protobuf
gazelle(name = "gazelle")

# update the running process on the pi
alias(
    name = "update",
    actual = "//scripts:updatepi",
)

alias(
    name = "sendtopi",
    actual = "//scripts:sendtopi",
)

alias(
    name = "deployclient",
    actual = "//scripts:deployclient",
)

# Typescript
ts_config(
    name = "ts_config",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

exports_files(["tsconfig.json"])

go_path(
    name = "go_path",
    include_transitive = False,
    mode = "copy",
    deps = [
        "//protobuf:irrigation",
    ],
)
