load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@npm//@bazel/labs:index.bzl", "ts_proto_library")

proto_library(
    name = "car_proto",
    srcs = ["car.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "car_go_proto",
    importpath = "github.com/mikbe/irrigation/protobuf/car_proto",
    protos = [":car_proto"],
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "car_ts_proto",
    proto = ":car_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "Proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/mikberg/irrigation/protobuf",
    proto = ":car_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "protobuf",
    embed = [":Proto_go_proto"],
    importpath = "github.com/mikberg/irrigation/protobuf",
    visibility = ["//visibility:public"],
)
