load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@npm//@bazel/labs:index.bzl", "ts_proto_library")

go_proto_library(
    name = "irrigation_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/mikberg/irrigation/api/v1/irrigation",
    proto = ":irrigation_proto",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "irrigation_ts_proto",
    proto = ":irrigation_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "irrigation_proto",
    srcs = ["irrigation.proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "irrigation",
    embed = [":irrigation_go_proto"],
    importpath = "github.com/mikberg/irrigation/api/v1/irrigation",
    visibility = ["//visibility:public"],
)
