sh_binary(
    name = "updatepi",
    srcs = ["updatepi.sh"],
    data = ["//irrigation:irrigation-raspberrypi"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "sendtopi",
    srcs = ["sendtopi.sh"],
    data = ["//irrigation:irrigation-raspberrypi"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

sh_binary(
    name = "deployclient",
    srcs = ["deployclient.sh"],
    args = ["$(execpath //client:client.tar)"],
    data = ["//client:client.tar"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)
