load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "analog.go",
        "cmd.go",
        "root.go",
        "run.go",
        "test.go",
    ],
    importpath = "github.com/mikberg/irrigation/irrigation/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sensing",
        "//pkg/water",
        "//pkg/yr",
        "@com_github_influxdata_influxdb_client_go_v2//:influxdb-client-go",
        "@com_github_mitchellh_go_homedir//:go-homedir",
        "@com_github_rs_zerolog//log",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@com_github_stianeikeland_go_rpio_v4//:go-rpio",
    ],
)
