load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/mikberg/irrigation/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//protobuf:irrigation",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
