load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/mikberg/irrigation/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sensing",
        "//pkg/water",
        "//protobuf",
        "@com_github_rs_zerolog//log",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
    ],
)
