load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")

ts_project(
    name = "compile_ts",
    srcs = ["blupp.ts"],
    tsconfig = {
        "compilerOptions": {
            "declaration": True,
        },
    },
)

js_library(
    name = "blupp",
    package_name = "@irrigation/protobuf/blupp",
    srcs = [
        "package.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":compile_ts",
    ],
)
